# fastmcp

./: README.md  control_plane_api.py  fastmcp_cloud.py  nixpacks.toml  pyproject.toml  railway.toml  railway_server.py
scripts/: railway-start.sh
tests/railway/: test_airtable_gateway.py
web/: .gitignore  README.md  next-env.d.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/servers/: route.ts
web/app/api/servers/[id]/: route.ts
web/app/api/servers/[id]/check/: route.ts
web/app/api/servers/[id]/logs/: route.ts
web/app/api/servers/[id]/token/: route.ts
web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx  textarea.tsx
web/lib/: control-plane.ts  server-store.ts
